# NameTransductionEngine

./: pyproject.toml
analysis/: geonames_data.ipynb  geonames_data_raw.ipynb  language_pack_data.ipynb  mcn_benchmark.ipynb  mcn_benchmark_general.ipynb  mcn_benchmark_latin.ipynb  wikidata_data_raw.ipynb  wikidata_entities_extraction.ipynb  wikidata_locations_analysis.ipynb
packs/: README.md
packs/latin/: entity_names.tsv  exonyms.tsv  pack.yaml  place_overrides.tsv  string_exonyms.tsv  tests.yaml
src/: main.py
src/datasets/: dataset_provider.py  paths.py
src/datasets/geonames/: download.py  load.py
src/name_transduction_engine/: cli.py  main.py  paths.py
src/name_transduction_engine/datasets/: dataset_provider.py  maintenance.py  shared.py
src/name_transduction_engine/datasets/geonames/: data_provision.py  download.py  load.py  schema.py
src/name_transduction_engine/datasets/wikidata/: build.py  data_provision.py  download.py  download_raw.py  load.py  schema.py
src/name_transduction_engine/enrichment/: enrichment_provider.py
src/name_transduction_engine/enrichment/packs/: compiler.py  resolver.py  schema.py
src/name_transduction_engine/tools/: clone_mcn.py
